--- a/index.html
+++ b/index.html
@@ -5,9 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Info Box Hover Effects</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="container">
+        <div class="box">
+            <div class="imgBx">
+                <img src="call.png">
+            </div>
+            <div class="content">
+                <div class="icon">
+                    <img src="call.png">
+                </div>
+                <h3>Phone No.</h3>
+                <h4>+1 234 567 890</h4>
+                <h4>+1 234 890 567</h4>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="mail.png">
+            </div>
+            <div class="content">
+                <div class="icon">
+                    <img src="mail.png">
+                </div>
+                <h3>Email</h3>
+                <h4>lalal@gmail.com</h4>
+                <h4>lalala@mail.ru</h4>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="map.png">
+            </div>
+            <div class="content">
+                <div class="icon">
+                    <img src="map.png">
+                </div>
+                <h3>Address</h3>
+                <h4>Spoon Street 23</h4>
+                <h4>Fork Avenue 56</h4>
+            </div>
+        </div>
+    </div>
 
 </body>
 
